--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -79,11 +79,11 @@
     ports:
       - "{{ OXIDIZED_LISTEN }}:{{ OXIDIZED_LISTEN_PORT }}"
     volumes:
-      - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_CONFIG_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/config:ro"
-      - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_DB_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/equipments.csv:ro"
-      - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_GIT_PUBLIC_KEY_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/id_git.pub:ro"
-      - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_GIT_PRIVATE_KEY_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/id_git:ro"
-      - "{{ OXIDIZED_IMPORT_MODEL_PATH }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/model:ro"
+      - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_CONFIG_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/config"
+      - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_DB_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/equipments.csv"
+      - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_GIT_PUBLIC_KEY_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/id_git.pub"
+      - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_GIT_PRIVATE_KEY_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/id_git"
+      - "{{ OXIDIZED_IMPORT_MODEL_PATH }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/model"
       - "{{ OXIDIZED_GIT_LOCAL_REPO }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/repo:rw"
   tags: molecule-notest
   become: true
