--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,4 +2,4 @@
 OXIDIZED_LISTEN_PORT: 8888
 OXIDIZED_LISTEN_IF: 0.0.0.0
 
-OXIDIZED_CONTAINER_CONFIG_PATH: /root/.config/oxidized
+OXIDIZED_CONTAINER_CONFIG_PATH: /home/oxidized/.config/oxidized
