--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,7 @@
   group:
     name: oxidized
     state: present
+    gid: 30000
 
 - name: Create Oxidized user
   user:
@@ -12,6 +13,7 @@
     shell: /sbin/nologin
     create_home: false
     state: present
+    uid: 30000
 
 - name: Create needed directories
   file:
