fix-ios-rbac - fix wrong defined ios rbac templating

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,7 +38,7 @@ OXIDIZED_GIT_PUBLIC_KEY_TEMPLATE: local/path/to/key.pub
 OXIDIZED_GIT_PUBLIC_KEY_FILE: id_git.pub
 
 OXIDIZED_HIDE_SECRETS: true
-OXIDIZED_HIDE_SECRETS_IOS_RBAC: ""
+OXIDIZED_HIDE_SECRETS_IOS_RBAC: false
 
 OXIDIZED_EQUIPMENTS: []
 
