--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -80,14 +80,6 @@
     update: false
     accept_hostkey: true
 
-- name: Copy known_hosts from root to oxidized.
-  copy:
-    src: /root/.ssh/known_hosts
-    dest: /home/oxidized/.ssh/known_hosts
-    owner: oxidized
-    group: oxidized
-    mode: u=rwx,g=rx,o=
-
 - name: Create the oxidized container.
   docker_container:
     recreate: true
@@ -105,6 +97,6 @@
       - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_GIT_PRIVATE_KEY_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/id_git:rw"
       - "{{ OXIDIZED_IMPORT_MODEL_PATH }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/model:rw"
       - "{{ OXIDIZED_GIT_LOCAL_REPO }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/repo:rw"
-      - "/home/oxidized/.ssh:/home/oxidized/.ssh:rw"
+      - "/root/.ssh/known_hosts:/home/oxidized/.ssh/known_hosts:rw"
   tags: molecule-notest
   become: true
