--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -59,9 +59,9 @@
     mode: u=rwx,g=,o=
   loop:
     - src: "{{ OXIDIZED_GIT_PUBLIC_KEY_TEMPLATE }}"
-      dst: "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_GIT_PUBLIC_KEY_FILE }}"
+      dst: "/home/oxidized/.ssh/{{ OXIDIZED_GIT_PUBLIC_KEY_FILE }}"
     - src: "{{ OXIDIZED_GIT_PRIVATE_KEY_TEMPLATE }}"
-      dst: "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_GIT_PRIVATE_KEY_FILE }}"
+      dst: "/home/oxidized/.ssh/{{ OXIDIZED_GIT_PRIVATE_KEY_FILE }}"
 
 - name: Copy models.
   copy:
@@ -70,7 +70,7 @@
     owner: oxidized
     group: oxidized
     mode: u=rwx,g=,o=
-  when: OXIDIZED_IMPORT_MODEL_LOCAL_PATH is defined
+  when: OXIDIZED_IMPORT_MODEL_LOCAL_PATH
 
 - name: Clone backup repository
   git:
@@ -93,8 +93,8 @@
     volumes:
       - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_CONFIG_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/config:rw"
       - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_DB_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/equipments.csv:rw"
-      - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_GIT_PUBLIC_KEY_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/id_git.pub:rw"
-      - "{{ OXIDIZED_CONFIG_PATH }}/{{ OXIDIZED_GIT_PRIVATE_KEY_FILE }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/id_git:rw"
+      - "/home/oxidized/.ssh/{{ OXIDIZED_GIT_PUBLIC_KEY_FILE }}:/home/oxidized/.ssh/{{ OXIDIZED_GIT_PUBLIC_KEY_FILE }}:rw"
+      - "/home/oxidized/.ssh/{{ OXIDIZED_GIT_PRIVATE_KEY_FILE }}:/home/oxidized/.ssh/{{ OXIDIZED_GIT_PRIVATE_KEY_FILE }}:rw"
       - "{{ OXIDIZED_IMPORT_MODEL_PATH }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/model:rw"
       - "{{ OXIDIZED_GIT_LOCAL_REPO }}:{{ OXIDIZED_CONTAINER_CONFIG_PATH }}/repo:rw"
       - "/root/.ssh/known_hosts:/home/oxidized/.ssh/known_hosts:rw"
