--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,12 +14,16 @@ galaxy_info:
     - name: Debian
       versions:
         - 10
+        - 11
     - name: CentOS
       versions:
         - 8
     - name: Ubuntu
       versions:
         - 18.04
+        - 20.04
+        - 22.04
+        - 24.04
 
   galaxy_tags:
     - networking
@@ -27,5 +31,4 @@ galaxy_info:
     - backup
 
   dependencies:
-    - geerlingguy.pip
-    - geerlingguy.docker
+    - containers.podman
