--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,8 +42,8 @@ OXIDIZED_HIDE_SECRETS_IOS_RBAC: false
 
 OXIDIZED_EQUIPMENTS: []
 
-# OXIDIZED_IMPORT_MODEL_LOCAL_PATH: "local/path/to/models"
-OXIDIZED_IMPORT_MODEL_PATH: "{{ OXIDIZED_CONFIG_PATH }}/models"
+#OXIDIZED_IMPORT_MODEL_LOCAL_PATH: "local/path/to/models"
+OXIDIZED_IMPORT_MODEL_PATH: ""
 OXIDIZED_IMPORT_MODEL: []
 
 OXIDIZED_HOOKS: []
