master - fix models

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -43,7 +43,7 @@ OXIDIZED_HIDE_SECRETS_IOS_RBAC: false
 OXIDIZED_EQUIPMENTS: []
 
 #OXIDIZED_IMPORT_MODEL_LOCAL_PATH: "local/path/to/models"
-OXIDIZED_IMPORT_MODEL_PATH: ""
+OXIDIZED_IMPORT_MODEL_PATH: "{{ OXIDIZED_CONFIG_PATH }}/models"
 OXIDIZED_IMPORT_MODEL: []
 
 OXIDIZED_HOOKS: []
