--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -81,7 +81,7 @@
     owner: oxidized
     group: oxidized
     mode: u=rwx,g=,o=
-  when: OXIDIZED_IMPORT_MODEL_PATH
+  when: OXIDIZED_MODELS
 
 - name: Clone backup repository
   git:
