master - add option to not use remote repo

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -32,6 +32,7 @@ OXIDIZED_GIT_USER: Oxidized
 OXIDIZED_GIT_EMAIL: oxidized@example.com
 OXIDIZED_GIT_LOCAL_REPO: "{{ OXIDIZED_CONFIG_PATH }}/repo"
 OXIDIZED_GIT_REMOTE_REPO: git@github.com:example/network-configuration.git
+OXIDIZED_GIT_USE_REMOTE_REPO: false
 OXIDIZED_GIT_PRIVATE_KEY_TEMPLATE: local/path/to/key
 OXIDIZED_GIT_PRIVATE_KEY_FILE: id_ed25519
 OXIDIZED_GIT_PUBLIC_KEY_TEMPLATE: local/path/to/key.pub
