master - add max threads

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,7 @@ OXIDIZED_RESOLVE_DNS: true
 OXIDIZED_INTERVAL: 3600
 OXIDIZED_USE_SYSLOG: true
 OXIDIZED_THREADS: 30
+OXIDIZED_USE_MAX_THREADS: true
 OXIDIZED_TIMEOUT: 20
 OXIDIZED_RETRIES: 3
 OXIDIZED_PROMPT: '!ruby/regexp /^([\w.@-]+[#>]\s?)$/'
